# ruxel

./: AGENTS.md  Cargo.toml  GOAL.md  README.md  RESTORE.md  mise.toml  rust-toolchain.toml
.github/workflows/: ci.yml
crates/ruxel/: Cargo.toml
crates/ruxel-agent/: Cargo.toml
crates/ruxel-agent/src/: facts.rs  ledger.rs  main.rs
crates/ruxel-agent/src/modules/: apt.rs  apt_repository.rs  authorized_key.rs  blockinfile.rs  command.rs  copy.rs  file.rs  filesystem.rs  get_url.rs  git.rs  iptables.rs  lineinfile.rs  lvg.rs  lvol.rs  misc.rs  mod.rs  mount.rs  postgresql.rs  replace.rs  shell.rs  slurp.rs  stat.rs  sysctl.rs  systemd.rs  user.rs
crates/ruxel-agent/tests/: protocol.rs
crates/ruxel-core/: Cargo.toml
crates/ruxel-core/src/: compiler.rs  engine.rs  inventory.rs  lib.rs  modules.rs  playbook.rs  task_eval.rs
crates/ruxel-core/tests/: render_parity.rs  runtime_goldens.rs  workload.rs
crates/ruxel-proto/: Cargo.toml  build.rs
crates/ruxel-proto/proto/: ruxel.proto
crates/ruxel-proto/src/: frame.rs  lib.rs
crates/ruxel/src/: lib.rs  main.rs  scheduler.rs  secrets.rs  transport.rs
crates/ruxel/src/commands/: apply.rs  plan.rs
crates/ruxel/tests/: op_resolver.rs  transport_gate.rs
docs/: ARCHITECTURE.md  DIRECTION.md  OPERATOR-SETUP.md  PLAN.md  SEMANTICS.md  SKEPTIC.md  VISION.md  WORKLOAD.md
docs/benchmarks/: converged-noop.md
src/: main.rs
src/commands/: mod.rs  plan.rs  run.rs
tools/fixtures/: bless-gate.sh  create.sh  destroy.sh  gate.sh  lib.sh  reap.sh
tools/oracle/: .gitignore  README.md  capture_fixture.sh  capture_runtime.sh  galaxy-requirements.yml  parity_vars.json  pyproject.toml  render_parity.py  runtime_semantics.yml
tools/oracle/callback_plugins/: ruxel_capture.py
tools/oracle/captures/: drives-bless.jsonl  install-base-bless.jsonl  install-base-fixture.jsonl  install-docker-bless.jsonl  pg-bless.jsonl  render-parity.jsonl  runtime-semantics.jsonl  update-packages-run1.jsonl  update-packages-run2.jsonl  upgrade-debian-bless.jsonl
tools/oracle/collections/ansible_collections/community/general/: MANIFEST.json  README.md  galaxy.yml
tools/oracle/collections/ansible_collections/community/general/plugins/lookup/: onepassword.py
tools/oracle/lookup_plugins/: pipe.py
