[package]
name = "ruxel-cli"
version = "0.1.0"
edition = "2024"
description = "Rust-native automation without the YAML archaeology"
license = "Apache-2.0"
repository = "https://github.com/tailrocks/ruxel"
homepage = "https://github.com/tailrocks/ruxel"
keywords = ["automation", "infrastructure", "devops", "cli"]
categories = ["command-line-utilities"]

# The bare `ruxel` crate name is taken on crates.io (an unrelated, unmaintained
# ray tracer), so the package is `ruxel-cli` while the installed binary stays
# `ruxel` — same split as tailrocks/holla (`holla-cli` package, `holla` binary).
[[bin]]
name = "ruxel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive", "color", "help", "usage"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
