[workspace]
members = [
    "crates/ruxel",
    "crates/ruxel-agent",
    "crates/ruxel-core",
    "crates/ruxel-proto",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/tailrocks/ruxel"
homepage = "https://github.com/tailrocks/ruxel"

[workspace.dependencies]
ruxel-core = { path = "crates/ruxel-core" }
ruxel-proto = { path = "crates/ruxel-proto" }

anyhow = "1.0"
base64 = "0.22"
hmac = "0.12"
pbkdf2 = { version = "0.12", default-features = false }
blake3 = "1"
clap = { version = "4.5", features = ["derive", "color", "env", "help", "usage"] }
openssh = { version = "0.11", features = ["native-mux"] }
openssh-sftp-client = "0.15"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "io-util", "time", "process"] }
minijinja = { version = "2.20", features = ["loader", "json", "loop_controls", "builtins", "unicode", "urlencode"] }
prost = "0.14"
regex-lite = "0.1"
prost-build = "0.14"
protoc-bin-vendored = "3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_norway = "0.9"
sha2 = "0.10"
thiserror = "2.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
