[package]
name = "ruxel-agent"
version.workspace = true
edition.workspace = true
description = "Ruxel target-host agent: native module runtime, probe engine, convergence ledger"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "ruxel-agent"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
regex-lite.workspace = true
ruxel-proto.workspace = true
serde_json.workspace = true
sha2.workspace = true
