[package]
name = "ruxel-proto"
version.workspace = true
edition.workspace = true
description = "Ruxel controller↔agent protocol messages (protobuf via prost, framed over SSH stdio)"
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
protoc-bin-vendored.workspace = true
